--- a/README.textile
+++ b/README.textile
@@ -78,7 +78,7 @@ bc. panako -v #prints version
 panako stats #db info
 
 
-h2(#usage). Panako Docker script
+
 
 h2(#usage). Panako Usage
 
@@ -180,6 +180,16 @@ This application checks the similarity of two files. The percentage returned ind
 
 Note that this operation is performed in memory. Nothing changes on disk.
 
+h2(#docker). Panako and Docker 
+
+Panako can also be ran in a containerized environment. A @Dockerfile@ is provided which should both work on @x86_64@ as @aarch64@. To build the container and run commands the following should get you started. Note that the database with fingerprints is located on the host at @~/.panako/docker_dbs@:
+
+bc. cd resources/scripts/
+docker build -t panako:2.1 .
+mkdir -p $HOME/.panako/docker_dbs
+wget "https://filesamples.com/samples/audio/mp3/sample3.mp3"
+docker run -v $HOME/.panako/docker_dbs:/root/.panako/dbs panako:2.1 panako store sample3.mp3
+docker run -v $HOME/.panako/docker_dbs:/root/.panako/dbs panako:2.1 panako stats
 
 h2(#read). Further Reading
 
